--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,14 @@
         "default_popup": "popup.html",
         "default_icon": "bleh.png"
     },
-    "permissions": ["activeTab"],
+    "permissions": [],
+    "host_permissions": ["<all_url>"],
+    "conent_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["content.js"]
+        }
+    ],
     "background": {
         "service_worker": "background.js"
     }
