--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,15 @@
         "default_popup": "popup.html",
         "default_icon": "bleh.png"
     },
-    "permissions": [],
+    "permissions": ["scriping", "tabs"],
     "host_permissions": ["<all_urls>"],
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
             "js": ["content.js"]
         }
-    ]
+    ],
+    "background": {
+        "service_worker": "background.js"
+    }
 }
