--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         "default_popup": "popup.html",
         "default_icon": "bleh.png"
     },
-    "permissions": ["scripting", "tabs"],
+    "permissions": ["scripting", "tabs", "activeTab"],
     "host_permissions": ["<all_urls>"],
     "content_scripts": [
         {
